# Vox_DIURNA.backend

./: main.py  pyproject.toml  requirements.txt
Ai/Cloud/: grok.py  prompt.txt
CRUD/read/: read_post.py
CRUD/upload/: post.py
alembic/versions/: 21ebc8dbdf1a_added_basic_schema_and_new_columns_to_.py  31ae3a5ea066_added_base_posts_table.py  415dc62d9b49_added_image_tsr.py  4db4fc173f79_added_basic_schema_and_new_columns_to_.py  d7adf23d99d3_removed_images_column.py
api/: __init__.py
api/api_key/auth/: authenticate.py
api/verion_1_api/: router.py
backend-ts/vox/: package.json  wrangler.jsonc
backend/CRUD/read/: read_post.py
backend/alembic/: env.py
backend/alembic/versions/: 94e13ef5c896_added_image_tsr.py
backend/api/: rate_limiter.py
backend/database/connnection/: connector.py
database/connnection/: connector.py
database/model/post/: post_content.py
database/schema/Ai/: content.py
database/schema/upload/: post.py
