[project]
name = "vox-diurna-backend"
version = "0.1.0"
description = "backend for my blog porject ! "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.1",
    "langchain>=1.2.13",
    "langchain-groq>=1.1.2",
    "psycopg2-binary>=2.9.11",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.37",
]
